Don't print header and footer

--- a/css/main.scss
+++ b/css/main.scss
@@ -56,3 +56,13 @@ $on-laptop:        800px;
 .searchHide {
     display: none;
 }
+
+@media print {
+    .site-header {
+        display: none;
+    }
+
+    .site-footer {
+        display: none;
+    }
+}
