--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,25 +1,28 @@
----
-layout: default
+--- 
+layout: default 
 ---
 <div class="post">
 
-  <header class="post-header">
-    <h1 class="post-title">{{ page.title }}</h1>
-    <dl class="tag-list">
-    <dt>Tags:</dt>
-    {% for tag in page.tags %}
-    <dd>
-        {% if tag contains 'cr' %}
-          <a href="{{site.baseurl}}/#{{tag}}">{{tag}}</a>
-        {% else %}
-          <a href="{{site.baseurl}}/tags/{{tag}}.html">{{tag}}</a>
-        {% endif %}
-    </dd>
-    {% endfor %}
-  </header>
+    <header class="post-header">
+        <h1 class="post-title">{{ page.title }}</h1>
+        <dl class="tag-list">
+            <dt>Tags:</dt> {% for tag in page.tags %}
+            <dd>
+                {% if tag contains 'cr' %}
+                <a href="{{site.baseurl}}/#{{tag}}">{{tag}}</a> {% else %}
+                <a href="{{site.baseurl}}/tags/{{tag}}.html">{{tag}}</a> {% endif %}
+            </dd>
+            {% endfor %}
+            <dd>
+                {% if page.page_number %}
+                (p. {{ page.page_number }})
+                {% endif %}
+            </dd>
+        </dl>
+    </header>
 
-  <article class="post-content">
-    {{ content }}
-  </article>
+    <article class="post-content">
+        {{ content }}
+    </article>
 
 </div>
