Correct reading of _data and _creatures, started on _tags

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -25,4 +25,7 @@
         document.getElementById("menuIcon").addEventListener( 'click' , menuClick );
 	    }
     </script>
+    {% if site.tags != "" %}
+    {% include collect_tags.html %}
+    {% endif %}
 </head>
