--- a/_layouts/creature.html
+++ b/_layouts/creature.html
@@ -3,26 +3,26 @@ layout: default
 ---
 <div class="post">
 
-    <header class="post-header">
-        <h1 class="post-title">{{ page.title }}</h1>
-        <dl class="tag-list">
-            <dt>Tags:</dt> {% for tag in page.tags %}
-            <dd>
-                {% if tag contains 'cr' %}
-                <a href="{{site.baseurl}}/#{{tag}}">{{tag}}</a> {% else %}
-                <a href="{{site.baseurl}}/tags/{{tag}}.html">{{tag}}</a> {% endif %}
-            </dd>
-            {% endfor %}
-            <dd>
-                {% if page.page_number %}
-                (p. {{ page.page_number }})
-                {% endif %}
-            </dd>
-        </dl>
-    </header>
+  <header class="post-header">
+    <h1 class="post-title">{{ page.title }}</h1>
+    <dl class="tag-list">
+      <dt>Tags:</dt> {% for tag in page.tags %}
+      <dd>
+        {% if tag contains 'cr' %}
+        <a href="{{ site.baseurl }}/#{{ tag }}">{{ tag }}</a>
+	{% else %}
+        <a href="{{ site.baseurl }}/tag/{{ tag }}">{{ tag }}</a>
+	{% endif %}
+      </dd>
+      {% endfor %}
+      {% if page.page_number %}
+      <dd>(p. {{ page.page_number }})</dd>
+      {% endif %}
+    </dl>
+  </header>
 
-    <article class="post-content">
-        {{ content }}
-    </article>
+  <article class="post-content">
+    {{ content }}
+  </article>
 
 </div>
