Prettier names, and not tag prepend

--- a/_layouts/tag.html
+++ b/_layouts/tag.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 <div class="post">
-  <h1 class="page-heading">Tag: {{ page.name }}</h1>
+  <h1 class="page-heading">{{ page.name }}</h1>
   <p id="creatureSearch">Search by name: <input type="search" id="jetsSearch"></p>
   {% assign all_creatures = site.creatures | where: 'tags', page.tag %}
   {% include challenge_rating.html %}
