--- a/_includes/challenge_rating.html
+++ b/_includes/challenge_rating.html
@@ -12,9 +12,9 @@
 <a id="cr{{ cr.level }}"></a>
 <h2 class="post-list-head jetsHide">Challenge {{ cr.level }}</h2>
 <ul class="post-list jetsContent">
-  {% for creature in creatures | sort: 'title' %}
+  {% for creature in creatures | sort: 'name %}
   <li>
-    <a class="post-link" href="{{ creature.url | prepend: site.baseurl }}">{{ creature.title }}</a>
+    <a class="post-link" href="{{ creature.url | prepend: site.baseurl }}">{{ creature.name }}</a>
   </li>
   {% endfor %}
 </ul>
