Added favicon, and missing github-source

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,22 +7,21 @@
     <div class="footer-col-wrapper">
       <div class="footer-col  footer-col-1">
         <ul class="contact-list">
-          <li><p class="text">{{ site.description }}</p></li>
-          <li><a href="mailto:{{ site.email }}">{{ site.email }}</a></li>
+          <li><span class="text">{{ site.description }}</span></li>
+	  <li><span class="text">Source available on <a href="{{ site.source-url }}" target="_blank">Github</a>.</span></li>
         </ul>
       </div>
 
       <div class="footer-col  footer-col-2">
         <p>Dr. <a href="http://jekyllrb.com/" target="_blank">Jekyll</a> tempts fickle fate in his pursuit of the <a href="http://www.sublimetext.com/" target="_blank">sublime</a>.</p>
       </div>
-    
+
     <div class="footer-col  footer-col-3">
-      <p>Source available on <a href="{{ site.source-url }}" target="_blank">Github</a>.</p>
+      <p>Unicorn iconby <a href="http://delapouite.com/">Delapouite</a> under <a href="http://creativecommons.org/licenses/by/3.0/">CC BY 3.0</a></p>
     </div>
   </div>
-  <div class="footer-top-link"><a href="#top">Back to top &#8593;</a></div>
 
-  </div>
+  <div class="footer-top-link"><a href="#top">Back to top &#8593;</a></div>
 
 </footer>
 <script>
