--- a/css/main.scss
+++ b/css/main.scss
@@ -29,6 +29,10 @@ $grey-color-dark:  darken($grey-color, 25%);
 $on-palm:          750px;
 $on-laptop:        800px;
 
+$statblock-main-color: #7A200D;
+$statblock-secondary-color: #922610;
+$statblock-background-color: #FDF1DC;
+
 
 
 // Using media queries with like this:
