Tags inside the statblock

--- a/_includes/challenge_rating.html
+++ b/_includes/challenge_rating.html
@@ -1,7 +1,7 @@
 <dl class="tag-list">
-  <dt>Challenge Rating:</dt>
+  <dt class="spacing">Challenge Rating:</dt>
   {% for cr in site.data.challenge_ratings %}
-  <dd>
+  <dd class="spacing">
     <a href="#cr{{ cr.level }}">{{ cr.level }}</a>
   </dd>
   {% endfor %}
