--- a/_sass/_statblock.scss
+++ b/_sass/_statblock.scss
@@ -208,3 +208,23 @@ p    .stat-block.wide,
 	width: 100%;
     }
 }
+
+.tag {
+    border: 1px solid #cbc6c3;
+    background-color: #fff;
+    box-shadow: inset 0 0 4px 0 #dcd1c7;
+    padding: 4px 8px;
+    font-size: 9px;
+    font-weight: bold;
+    text-align: center;
+    text-transform: uppercase;
+    display: inline-block;
+    margin-bottom: 3px;
+    margin-left: 3px;
+}
+.tag a {
+    color: #000;
+}
+.tag a:visited {
+    color: #000;
+}
