--- a/_layouts/creature.html
+++ b/_layouts/creature.html
@@ -6,7 +6,7 @@ layout: default
     <hr class="orange-border" />
     <div class="section-left">
       <div class="creature-heading">
-	<h1>{{ page.title }}</h1>
+	<h1>{{ page.name }}</h1>
 	<h2>{{ page.size }}, {{ page.alignment }}</h2>
       </div> <!-- creature heading -->
       <svg height="5" width="100%" class="tapered-rule">
