--- a/_sass/_statblock.scss
+++ b/_sass/_statblock.scss
@@ -57,7 +57,7 @@
 }
 .orange-border{
     display: block;
-    background: #E69A28;
+    background: $brand-color-secondary;
     border: 1px solid #000;
     height: 5px;
     padding: 0 10px 0;
