--- a/css/main.scss
+++ b/css/main.scss
@@ -18,7 +18,7 @@ $spacing-unit-line: 7px;
 $text-color:       #333;
 $background-color: #fdfdfd;
 $brand-color: #4D96B9;
-$brand-color-secondary: #E69A28;
+$brand-color-secondary: #109269;
 $brand-color-light: lighten($brand-color-secondary, 5%);
 $brand-color-dark: darken($brand-color-secondary, 5%);
 
