Added saving throws to the creature layout

--- a/_layouts/creature.html
+++ b/_layouts/creature.html
@@ -75,6 +75,12 @@ layout: default
 	  <p>{{ page.senses }}</p>
 	</div>
 	{% endif %}
+	{% if page.saving_throws %}
+	<div class="property-line">
+	  <h4>Saving Throws</h4>
+	  <p>{{ page.skills }}</p>
+	</div>
+	{% endif %}
 	{% if page.skills %}
 	<div class="property-line">
 	  <h4>Skills</h4>
