Using the correct variable

--- a/_layouts/creature.html
+++ b/_layouts/creature.html
@@ -78,7 +78,7 @@ layout: default
 	{% if page.saving_throws %}
 	<div class="property-line">
 	  <h4>Saving Throws</h4>
-	  <p>{{ page.skills }}</p>
+	  <p>{{ page.saving_throws }}</p>
 	</div>
 	{% endif %}
 	{% if page.skills %}
