--- a/_sass/_statblock.scss
+++ b/_sass/_statblock.scss
@@ -156,7 +156,7 @@
 .property-block{
     padding: 10px 2px 0;
 }
-#actions, #reactions, #legendary-actions {
+#actions, #reactions, #legendary-actions, #roleplaying-information {
     border-bottom: 1px solid $statblock-main-color;
     color: $statblock-main-color;
     font-size: 21px;
@@ -167,12 +167,13 @@
     padding: 0 0 10px;
     text-indent: 5px;
 }
-#actions, #reactions, #legendary-actions {
+#actions, #reactions, #legendary-actions, #roleplaying-information {
     margin: 0 0 10px;
 }
 #reactions:last-child,
 #legendary-actions:last-child,
-#actions:last-child{
+#actions:last-child,
+#roleplaying-information:last-child {
     margin: 0;
 }
 
