--- a/_layouts/tag.html
+++ b/_layouts/tag.html
@@ -3,7 +3,10 @@ layout: default
 ---
 <div class="post">
   <h1 class="page-heading">{{ page.name }}</h1>
-  <p id="creatureSearch">Search by name: <input type="search" id="jetsSearch"></p>
+  <p id="creatureSearch" class="search-bar">
+    <span class="fa fa-search icon"></span>
+    <input type="search" class="jetsSearch" id="jetsSearch" placeholder="Search by name">
+  </p>
   {% assign all_creatures = site.creatures | where: 'tags', page.tag %}
   {% assign cr-tags = "" | split: "" %}
   {% for cr in site.data.challenge_ratings %}
