--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,8 +3,8 @@
     <meta name="viewport" content="width=device-width">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-    <link rel="shortcut icon" href="{{ '/images/dragon-head.png' | prepend: site.baseurl }}" type="image/x-icon">
-    <link rel="apple-touch-icon" href="{{ '/images/dragon-head.png' | prepend: site.baseurl }}">
+    <link rel="shortcut icon" href="{{ '/images/unicorn-favicon.png' | prepend: site.baseurl }}" type="image/x-icon">
+    <link rel="apple-touch-icon" href="{{ '/images/unicorn-touch-icon.png' | prepend: site.baseurl }}">
 
     <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
     <meta name="description" content="{{ site.description }}">
